# c-tavern

./: .env.example  .gitignore  .replit  README.md  README.zh-CN.md  _config.yml  main.py  package-lock.json  package.json  pyproject.toml  server.js  sync_github.py
ai/: image_gen.py  llm_router.py  ollama_client.py  tts.py
bots/: telegram_bot.py  whatsapp_bot.py
db/: clavo_memory.sqlite-shm  clavo_memory.sqlite-wal  memory.py  personas.py
static/: app.css  app.js  manifest.json  styles.css  sw.js
templates/: index.html  login.html
utils/: auth.py  config.py  push.py
