[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "flask>=3.1.3",
    "pillow>=12.2.0",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "qrcode>=8.2",
    "requests>=2.34.2",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]
